@@ -6393,64 +6393,64 @@ INSERT INTO dchecks VALUES (2,2,9,'system.uname','','10050');
 -- Dumping data for table graphs
 --
 
-INSERT INTO graphs VALUES (2,'CPU Loads',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (3,'CPU Utilization',900,200,0,0.0000,100.0000,0,1,1,1);
-INSERT INTO graphs VALUES (4,'Network utilization',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (5,'Disk usage',900,200,0,0.0000,100.0000,0,1,1,1);
-INSERT INTO graphs VALUES (6,'Interface 01 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (7,'Interface 02 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (8,'Interface 03 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (9,'Interface 04 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (10,'Interface 05 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (11,'Interface 06 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (12,'Interface 07 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (13,'Interface 08 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (14,'Interface 09 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (15,'Interface 10 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (16,'Interface 11 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (17,'Interface 12 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (18,'Interface 13 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (19,'Interface 14 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (20,'Interface 15 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (21,'Interface 16 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (22,'Interface 17 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (23,'Interface 18 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (24,'Interface 19 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (25,'Interface 20 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (26,'Interface 21 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (27,'Interface 22 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (28,'Interface 23 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (29,'Interface 24 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (30,'Interface 25 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (31,'Interface 26 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (32,'Interface 27 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (33,'Interface 28 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (34,'Interface 29 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (35,'Interface 30 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (36,'Interface 31 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (37,'Interface 32 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (38,'Interface 33 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (39,'Interface 34 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (40,'Interface 35 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (41,'Interface 36 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (42,'Interface 37 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (43,'Interface 38 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (44,'Interface 39 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (45,'Interface 40 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (46,'Interface 41 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (47,'Interface 42 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (48,'Interface 43 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (49,'Interface 44 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (50,'Interface 45 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (51,'Interface 46      Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (52,'Interface 47 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (53,'Interface 48 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (54,'Interface 49 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (55,'Interface 50 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (56,'Interface 51 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (57,'Interface 52 Bandwidth',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (58,'Network Traffic',900,200,0,0.0000,100.0000,0,1,1,0);
-INSERT INTO graphs VALUES (59,'Dell PowerEdge Chassis Temperature',900,200,0,0.0000,100.0000,0,1,1,0);
+INSERT INTO graphs VALUES (2,'CPU Loads',900,200,0,0,0.0000,100.0000,0,1,1,0);
+INSERT INTO graphs VALUES (3,'CPU Utilization',900,200,0,0,0.0000,100.0000,0,0,0,1,1,1);
+INSERT INTO graphs VALUES (4,'Network utilization',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (5,'Disk usage',900,200,0,0,0.0000,100.0000,0,0,0,1,1,1);
+INSERT INTO graphs VALUES (6,'Interface 01 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (7,'Interface 02 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (8,'Interface 03 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (9,'Interface 04 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (10,'Interface 05 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (11,'Interface 06 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (12,'Interface 07 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (13,'Interface 08 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (14,'Interface 09 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (15,'Interface 10 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (16,'Interface 11 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (17,'Interface 12 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (18,'Interface 13 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (19,'Interface 14 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (20,'Interface 15 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (21,'Interface 16 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (22,'Interface 17 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (23,'Interface 18 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (24,'Interface 19 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (25,'Interface 20 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (26,'Interface 21 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (27,'Interface 22 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (28,'Interface 23 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (29,'Interface 24 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (30,'Interface 25 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (31,'Interface 26 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (32,'Interface 27 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (33,'Interface 28 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (34,'Interface 29 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (35,'Interface 30 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (36,'Interface 31 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (37,'Interface 32 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (38,'Interface 33 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (39,'Interface 34 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (40,'Interface 35 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (41,'Interface 36 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (42,'Interface 37 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (43,'Interface 38 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (44,'Interface 39 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (45,'Interface 40 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (46,'Interface 41 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (47,'Interface 42 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (48,'Interface 43 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (49,'Interface 44 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (50,'Interface 45 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (51,'Interface 46      Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (52,'Interface 47 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (53,'Interface 48 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (54,'Interface 49 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (55,'Interface 50 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (56,'Interface 51 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (57,'Interface 52 Bandwidth',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (58,'Network Traffic',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
+INSERT INTO graphs VALUES (59,'Dell PowerEdge Chassis Temperature',900,200,0,0,0.0000,100.0000,0,0,0,1,1,0);
 
 --
 -- Dumping data for table graphs_items
